# VisionBeat

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
assets/samples/: README.md
configs/: default.toml  default.yaml  rhythm-hybrid.yaml
docs/: architecture.md  audio.md  cnn_baselines.md  configuration.md  demo_guide.md  early_arm_labels_v2.md  gesture_definitions.md  juce_integration.md  observability.md  rhythm_prediction_evaluation.md  testing.md  tracking.md
scripts/: generate_demo_samples.py
src/visionbeat/: __init__.py  __main__.py  analyze_decoder_timing.py  analyze_rhythm_predictions.py  app.py  audio.py  build_training_samples.py  camera.py  classify_decoded_triggers.py  cnn_model.py  cnn_trigger.py  config.py  dataset_recording.py  extract_dataset_features.py  features.py  gesture_classifier.py  gestures.py  infer_cnn.py  interfaces.py  logging_config.py  math_utils.py  mediapipe_provider.py  models.py  movenet_provider.py  observability.py  overlay.py  pose_provider.py  predict_cnn.py  predictive_shadow.py  prepare_completion_dataset.py  prepare_early_arm_dataset.py  prepare_training_data.py  render_pose_video.py  rhythm_prediction.py  session_recording.py  sweep_decoder.py  tracking.py  train_cnn.py  train_gesture_classifier.py  transport.py  (+1 more)
src/visionbeat.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: conftest.py  synthetic_motion.py  test_app.py  test_audio.py  test_audio_integration.py  test_camera.py  test_cli.py  test_config.py  test_gestures.py  test_models.py  test_overlay.py  test_tracking.py  test_tracking_integration.py
tests/integration/: test_audio_integration.py  test_tracking_integration.py
tests/unit/: test_analyze_decoder_timing.py  test_analyze_rhythm_predictions.py  test_app.py  test_audio.py  test_build_training_samples.py  test_camera.py  test_classify_decoded_triggers.py  test_cli.py  test_cnn_model.py  test_cnn_trigger.py  test_config.py  test_dataset_recording.py  test_extract_dataset_features.py  test_feature_pipeline_regression.py  test_features.py  test_gestures.py  test_infer_cnn.py  test_mediapipe_provider.py  test_models.py  test_movenet_provider.py  test_observability.py  (+15 more)
