[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "visionbeat"
version = "0.1.0"
description = "Webcam-based gestural percussion instrument using MediaPipe, OpenCV, and low-latency sample playback."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "OpenAI" }]
keywords = ["computer-vision", "gestures", "music", "mediapipe", "opencv"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Topic :: Multimedia :: Sound/Audio",
  "Topic :: Scientific/Engineering :: Image Recognition",
]
dependencies = [
  "mediapipe>=0.10.14,<0.11",
  "numpy>=1.26,<2",
  "opencv-python>=4.10.0",
  "pygame>=2.5.2",
]

[project.optional-dependencies]
dev = [
  "mypy>=1.10",
  "pytest>=8.2",
  "pytest-cov>=5.0",
  "ruff>=0.5",
]
movenet = [
  "tflite-runtime>=2.14",
]

[project.scripts]
visionbeat = "visionbeat.__main__:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-q --strict-markers"
testpaths = ["tests/unit", "tests/integration"]
markers = [
  "integration: tests that exercise cross-module integration paths",
  "webcam: tests that require access to a physical webcam",
]

[tool.coverage.run]
branch = true
source = ["src/visionbeat"]

[tool.coverage.report]
show_missing = true
skip_covered = true

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "D"]
ignore = ["D203", "D212"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["D100", "D101", "D102", "D103", "D107"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_configs = true
mypy_path = ["src"]
packages = ["visionbeat"]

[[tool.mypy.overrides]]
module = [
  "cv2",
  "mediapipe",
  "mediapipe.python",
  "pygame",
  "numpy",
  "numpy.typing",
  "tflite_runtime",
  "tflite_runtime.interpreter",
]
ignore_missing_imports = true
